crates/wac-parser/tests/resolution/fail/unknown-target-path.wac
package test:comp targets foo:bar/baz;
